--- a/viz/index.html
+++ b/viz/index.html
@@ -159,7 +159,8 @@
     </div>
 
     <div class="stats" id="stats">t=0.000s • disk_angle=0.0° • piece_angle=0.0° • rpm=300 • active=[]</div>
-    <div class="hint">Disk döner → parça diskle birlikte döner. Parçanın MUTLAK açısına en yakın bobin (±overlap/2) yanar. Faz ofseti ile ince ayar yapabilirsin.</div>
+    <div class="hint">Note: Commutation energizes the electromagnet whose azimuth aligns with the piece’s absolute mechanical angle; **overlap** sets the electrical **dwell window** (±overlap/2) around that alignment. **Phase offset** compensates sensor/driver latency and the magnetic lead/lag between rotor flux and the stator pole. In **Paired** mode, the adjacent coil is co-energized to widen the resultant MMF and smooth torque ripple.
+</div>
   </div>
 </div>
 
