--- a/viz/index.html
+++ b/viz/index.html
@@ -17,7 +17,7 @@
     --pieceW: 44px;                
     --pieceH: 22px;
     --pieceOffset: 12px;           
-    --pieceAngle: 0deg;          
+    --pieceAngle: 90deg;          
 
   
     --bg:#0a0b10; --panel:#0e1219; --border:#1a2130;
@@ -159,7 +159,7 @@
     </div>
 
     <div class="stats" id="stats">t=0.000s • disk_angle=0.0° • piece_angle=0.0° • rpm=300 • active=[]</div>
-    <div class="hint">Note: Commutation energizes the electromagnet whose azimuth aligns with the piece’s absolute mechanical angle; overlap sets the electrical dwell window (±overlap/2) around that alignment. Phase offset compensates sensor/driver latency and the magnetic lead/lag between rotor flux and the stator pole. In Paired mode, the adjacent coil is co-energized to widen the resultant MMF and smooth torque ripple.
+    <div class="hint">Note:The system energizes the electromagnet aligned with the rotor’s absolute angle. <em>Overlap</em> defines the dwell range (±overlap/2) around this position, while <em>phase offset</em> corrects timing errors between sensor and drive signals. In <em>Paired</em> mode, adjacent coils are co-energized to broaden the magnetic field and reduce torque ripple.
 </div>
   </div>
 </div>
