--- a/viz/index.html
+++ b/viz/index.html
@@ -192,8 +192,8 @@ function cssNum(el, name){ return parseFloat(getComputedStyle(el).getPropertyVal
 function trackRadius(){ const ring = cssNum(document.documentElement,'--ring'); const inset=cssNum(document.documentElement,'--trackInset'); return ring/2 - inset; }
 function ringCenter(){ return { cx: arena.clientWidth/2, cy: arena.clientHeight/2 }; }
 
-// ---- JSONL playback ----
-let logFrames = [];   // {t, disk_angle, piece_angle, rpm, active}
+
+let logFrames = [];   
 let playing = false;
 
 document.getElementById('loadLog').addEventListener('change', async (e)=>{
@@ -206,7 +206,7 @@ document.getElementById('loadLog').addEventListener('change', async (e)=>{
 
 document.getElementById('btnPlayLog').addEventListener('click', ()=>{
   if(!logFrames.length) { alert('Önce bir JSONL dosyası seç.'); return; }
-  if(raf){ cancelAnimationFrame(raf); raf=null; } // canlı döngüyü durdur
+  if(raf){ cancelAnimationFrame(raf); raf=null; } 
   playing = true;
   playLogFromFrames(logFrames);
 });
@@ -214,9 +214,9 @@ document.getElementById('btnPlayLog').addEventListener('click', ()=>{
 async function playLogFromFrames(frames){
   for (let i = 0; i < frames.length && playing; i++) {
     const f = frames[i];
-    t   = Number(f.t) || 0;                 // <-- saniyeyi log’tan al
-    ang = wrap360(f.disk_angle);            // diski log’tan al
-    rpm = (f.rpm != null ? f.rpm : rpm);    // gösterge için (opsiyon)
+    t   = Number(f.t) || 0;                 
+    ang = wrap360(f.disk_angle);            
+    rpm = (f.rpm != null ? f.rpm : rpm);    
     render();
     const dt = (i > 0) ? Math.max(0, (frames[i].t - frames[i-1].t) * 1000) : 16;
     await new Promise(r => setTimeout(r, dt || 16));
